tons of cleanup, add 2025/2026, setup prettier, setup src alias

--- a/src/content/reading/2025.md
+++ b/src/content/reading/2025.md
@@ -2,11 +2,26 @@
 title: "2025"
 published: true
 date: "2025-01-08T03:46:26Z"
-excerpt: List of books I've read in 2024, in chronological order.
-book_count: 1
-goal: 35
+excerpt: List of books I've read in 2025, in chronological order.
+book_count: 5
+goal: 12
 twitter_card: summary
+---
+
+---
+
+Missed the goal hard this year. I sold a house, bought a house, moved across the country,
+got a promotion at work with new responsibilities. Reading took a back seat, unfortunately.
+
 ---
 
 - **A Beautifully Foolish Endeavor**
   <div><small>Hank Green</small></div>
+- **Mastering the Universe: The Obscene Wealth of the Ruling Class, What They Do With Their Money, and Why You Should Hate Them Even More**
+  <div><small>Rob Larson</small></div>
+- **Migrations**
+  <div><small>Charlotte McConaghy</small></div>
+- **An Elegant Puzzle: Systems of Engineering Management**
+  <div><small>Will Larson</small></div>
+- **The Phoenix Project: A Novel About IT, DevOps, and Helping Your Business Win**
+  <div><small>Gene Kim, Kevin Behr, and George Spafford</small></div>
